git pull origin main

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     
 </body>
 
-<script>        
+<script>
+
+function showConfirm (Message) {}
+var confirmBox = document.createElement("div");
+confirmBox.classList.add ("conform-box");
+
+
 
 
 </script>
